<resources>
    <string name="app_name">P1BJCS</string>
    <string name="titulo">Programando moviles</string>
    <string name="tesoem">tesoem</string>
    <string name="ingenieria_en_sistemas_computacionales">INGENIERIA EN SISTEMAS COMPUTACIONALES</string>
    <string name="programando_moviles">Programando moviles</string>

    <string name="brandon_jonathan_castro_salazar">Brandon Jonathan Castro Salazar</string>
    <string name="_6s11">6S11</string>
</resources>
